@@ -4,6 +4,7 @@ BUGS AND TODOS
   * @todo Add username support and only show comments up to reading position.
 https://readmill.com/jhmapleybrittle/reads/my-phone-book
 https://readmill.com/books/linchpin-are-you-indispensable
+  * @todo add closing comments
 
 VERSION 0.1, 2013-XX-XX
 -----------------------
